<resources>
    <string name="app_name">TeacherByVideo</string>
    <string name="teach_fall">教学大厅</string>
    <string name="mime">我的信息</string>
    <string name="course">我的课程</string>
    <string name="history">我的历史</string>
    <string name="marks">我的积分</string>
    <string name="preview">预览</string>
    <string name="save_net">保存在服务器</string>
    <string name="save_local">保存在本地</string>
    <string name="certain">确定</string>
    <string name="cancle">取消</string>
    <string name="record_back">确认放弃刚拍的视屏？</string>
    <string name="record_delet">是否删除刚拍的整段视屏，重新拍摄</string>
    <string name="record_composer">正在合成视频</string>
    <string name="my_video">我的视频</string>
    <string name="my_info">个人信息</string>
    <string name="user_icon">头像</string>
    <string name="user_name">昵称</string>
    <string name="spots_time">运动时间</string>
    <string name="spots_times">运动次数</string>
    <string name="spots_mark">评分</string>
    <string name="change_password">修改密码</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="change_user">切换账号</string>
    <string name="quit">退出</string>
    <string name="add_course">添加课程</string>
    <string name="course_introduce">课程介绍：</string>
    <string name="comment">评论:</string>
    <string name="user">电话：</string>
    <string name="password">密码：</string>
    <string name="load">注册/登录</string>
    <string name="register_message">温馨提示：未注册的手机号，登录时将自动注册</string>
    <string name="phone">手机号</string>
    <string name="myvideo_delete">是否删除该视频？</string>
    <string name="changename">修改昵称</string>
    <string name="phone_can_use">手机号可用</string>
    <string name="phone_cannot_use">手机号已存在</string>
    <string name="register_fail">注册失败</string>
    <string name="load_pass_fail">用户或密码错误</string>
    <string name="loaded">用户已登录</string>
</resources>
