<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:paddingTop="24dp"
        android:background="@color/mainColor"
        android:textColor="#fff"
        android:textSize="16sp"
        android:text="@string/mime"
        android:gravity="center"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/bg_gray_color"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_mineinfo"
        android:textSize="12sp"
        android:textColor="@color/textColor"
        android:text="@string/mime"
        android:drawableLeft="@mipmap/ic_mineinfo"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:drawableRight="@mipmap/ic_more"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divideColor"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_course"
        android:textSize="12sp"
        android:textColor="@color/textColor"
        android:text="@string/course"
        android:drawableLeft="@mipmap/ic_course"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:drawableRight="@mipmap/ic_more"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divideColor"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_history"
        android:textSize="12sp"
        android:textColor="@color/textColor"
        android:text="@string/history"
        android:drawableLeft="@mipmap/ic_history"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:drawableRight="@mipmap/ic_more"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divideColor"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_marks"
        android:textSize="12sp"
        android:textColor="@color/textColor"
        android:text="@string/marks"
        android:drawableLeft="@mipmap/ic_marks"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:drawableRight="@mipmap/ic_more"
        android:gravity="center_vertical"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divideColor"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        />
</LinearLayout>