<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MyInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:paddingTop="24dp"
        android:background="@color/mainColor"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_back"
            android:src="@mipmap/ic_back_jian"
            android:scaleType="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/my_info"
            android:gravity="center"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/divide_secondColor"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:background="@drawable/click_state"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:text="@string/user_icon"
            android:gravity="center"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv_usericon"
            android:src="@mipmap/ic_usericon"
            android:layout_gravity="right"
            />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_secondColor"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:id="@+id/frag_user_name"
        android:background="@drawable/click_state"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:text="@string/user_name"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:id="@+id/tv_user_name"
            android:textColor="@color/textColor"
            android:text="小薇薇"
            android:layout_gravity="right"
            android:gravity="center"
            />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_secondColor"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:background="@drawable/click_state"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:text="@string/spots_times"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:id="@+id/tv_spots_times"
            android:textColor="@color/textColor"
            android:text="3次"
            android:layout_gravity="right"
            android:gravity="center"
            />

    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_secondColor"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:background="@drawable/click_state"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:text="@string/spots_time"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:id="@+id/tv_spots_time"
            android:textColor="@color/textColor"
            android:text="1小时"
            android:layout_gravity="right"
            android:gravity="center"
            />

    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_secondColor"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:background="@drawable/click_state"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/textColor"
            android:text="@string/spots_mark"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:id="@+id/tv_spots_mark"
            android:textColor="@color/textColor"
            android:text="85分"
            android:layout_gravity="right"
            android:gravity="center"
            />

    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/divide_secondColor"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/tv_changepassword"
        android:text="@string/change_password"
        android:textSize="14sp"
        android:textColor="@color/textColor"
        android:gravity="center|left"
        android:paddingLeft="16dp"
        android:background="@drawable/click_state"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_secondColor"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/divide_secondColor"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divide_secondColor"
        />

    <TextView
        android:id="@+id/tv_quit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/click_state"
        android:gravity="center|left"
        android:paddingLeft="16dp"
        android:text="@string/quit"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

</LinearLayout>